# gm2_analysis

./: .gitignore  CMakeLists.txt  VKVK.cpp  do_analysis_charm.hpp  do_runs.sh  fit_all_gm2.cpp  fit_charm.cpp  fit_etas.cpp  fit_strange.cpp  functions_gm2_analysis.cpp  functions_gm2_analysis.hpp  gm2_analysis.cpp  m_Ds.cpp  m_Ds_2x2.cpp  m_Ds_ndata.cpp  m_K_2p2.cpp  m_K_2x2.cpp  m_K_ndata.cpp  mpcac.cpp  mpcac_over_tau.txt  mpi_fpi.cpp  perturbative_sd.cpp  plateaux.txt  r_had_barMS  r_had_formatted  scale_setting.cpp  scale_setting_rew.cpp  some_custom_fits.cpp  status_simulations.md  w0_scale_setting.cpp
gm2_book/: .gitignore  MDs.qmd  MK.qmd  Mpi.qmd  SD_tmin.qmd  VKVK.qmd  _quarto.yml  amu_SD_c_pert.txt  amu_SD_s_pert.txt  blinded_B64.qmd  blinded_C80.qmd  blinded_D96.qmd  blinded_continuum.qmd  continuum_amu_c_full.qmd  continuum_amu_l_W.qmd  continuum_amu_l_sd.qmd  continuum_amu_s_W.qmd  continuum_amu_s_full.qmd  continuum_amu_s_sd.qmd  difference_continuum.qmd  pi0.qmd  scale_setting.qmd  scratch.qmd  unitary_K_B64.qmd  unitary_K_C80.qmd  unitary_K_D96.qmd  unitary_K_E112.qmd
gm2_book/plot_paper_sc/: cut_or no.qmd  functions.R  plot_FVE_s.R  plot_FVE_s_LD.R  plot_FVE_s_SD.R  plot_FVE_s_W.R  plot_SD_s.R  scale_setting.R  systematics.qmd
gm2_book/plot_paper_sc/FVE/: clean.sh  plot_FVE_c.R  plot_FVE_c_LD.R  plot_FVE_c_SD.R  plot_FVE_c_W.R  plot_FVE_s.R  plot_FVE_s_LD.R  plot_FVE_s_SD.R  plot_FVE_s_W.R
gm2_book/plot_paper_sc/multiminchia/: functions.R  plot_SD_s.R
gm2_book/plot_paper_sc/plot_no_tuning/: plot_SD_s.R
gm2_book/plot_paper_sc/tmin/: amu_SDtmin_c.R  amu_SDtmin_s.R
